[gd_scene load_steps=9 format=2]

[ext_resource path="res://map/Cursor.gd" type="Script" id=1]
[ext_resource path="res://assets/animations/shake.anim" type="Animation" id=2]
[ext_resource path="res://assets/map/placemark.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/species/trixens/ship.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Act"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, -18 ), Vector2( 0, -18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( -2, -2, 1 ),
"update": 0,
"values": [ -18.0, -43.0, -18.0 ]
}

[sub_resource type="DynamicFont" id=3]
size = 45
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="Cursor" type="Node2D" groups=[
"in_camera",
"map_cursor",
]]
script = ExtResource( 1 )
player_i = 0
cell_size = 0
grid_position = Vector2( 0, 0 )

[node name="MoveTween" type="Tween" parent="."]

[node name="Wrapper" type="Node2D" parent="."]
position = Vector2( 0, -40 )

[node name="Graphics" type="Node2D" parent="Wrapper"]
position = Vector2( 0.01, -41.6111 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Wrapper/Graphics"]
autoplay = "Float"
anims/Act = SubResource( 1 )
anims/Float = SubResource( 2 )
anims/shake = ExtResource( 2 )

[node name="Placemark" type="Sprite" parent="Wrapper/Graphics"]
position = Vector2( 0, -60 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Ship" type="Sprite" parent="Wrapper/Graphics"]
position = Vector2( 0, -85 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="LabelContainer" type="Node2D" parent="Wrapper/Graphics"]
editor/display_folded = true
position = Vector2( 0, -166 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Wrapper/Graphics/LabelContainer"]
margin_left = -88.0
margin_top = -29.0
margin_right = 89.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 3 )
text = "P4"
align = 1
uppercase = true
[connection signal="animation_finished" from="Wrapper/Graphics/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
